--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "globstar": "^1.0.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.11.0",
+    "npm-run-all": "^4.1.5",
     "nu-html-checker": "^0.1.0",
     "onchange": "^5.2.0"
   },
   "dependencies": {
-    "npm-run-all": "^4.1.5",
+    "install": "^0.12.2",
+    "npm": "^6.8.0",
     "rimraf": "^2.6.3"
   }
 }
